# ParallelProgramming

./: CMakeLists.txt  main.cpp  opencl.cpp  openmp.cpp  sequential.cpp  vectorized.cpp
